--- a/index.html
+++ b/index.html
@@ -21,18 +21,26 @@
     <div class="content container__content">
         <h1 class="content__header">Личный сайт студента GeekBrains</h1>
         <div class="photo">
-            <img src="img/photo.png" class="photo__photo-main"/>
-            <p class="photo__text photo__text--grey">Добрый день. Меня зовут Анна Титаренко.</p>
+            <table class="table">
+                <tr>
+                    <td>
+                        <img src="img/photo.png" class="photo__photo-main"/>
+                    </td>
+                    <td class="leftcol">
+                    <p class="photo__text photo__text--grey">Добрый день! Меня зовут Анна Титаренко.</p>
         </div>
-
         <div class="about-me">
             <p>Я - начинающий программист. Я совсем недавно встала на этот путь, но уже успела написать свой первый сайт.</p>
             <p>В этом мне помог курс
                 <a href="https://geekbrains.ru/lessons/11317" target="_blank">Основы программирования</a>
                 образовательного IT-портала GeekBrains.</p>
             <p>На этом сайте вы сможете сыграть в три игры, которые я написала:</p>
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
+
 
     <div class="footer">
         <div class="menu menu--theme_grey">
