--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="menu menu--theme_blue">
         <a href="#" class="menu__item">Главная</a>
         <span class="menu__separator">|</span>
-        <a href="puzzles.html" class="menu__item">Загадки</a>
+        <a href="puzzles.html" class="menu__item">Красивая верстка</a>
         <span class="menu__separator">|</span>
-        <a href="guess.html" class="menu__item">Угадайка</a>
+        <a href="guess.html" class="menu__item">Красивые стили БЭМ</a>
         <span class="menu__separator">|</span>
-        <a href="guess-2.html" class="menu__item">Угадайка мультиплеер</a>
+        <a href="guess-2.html" class="menu__item">Программирование</a>
     </div>
 
     <div class="content container__content">
@@ -46,11 +46,11 @@
         <div class="menu menu--theme_grey">
             <a href="#" class="menu__item">Главная</a>
             <span class="menu__separator">|</span>
-            <a href="puzzles.html" class="menu__item">Загадки</a>
+            <a href="puzzles.html" class="menu__item">Красивая верстка</a>
             <span class="menu__separator">|</span>
-            <a href="guess.html" class="menu__item">Угадайка</a>
+            <a href="guess.html" class="menu__item">Красивые стили БЭМ</a>
             <span class="menu__separator">|</span>
-            <a href="guess-2.html" class="menu__item">Угадайка мультиплеер</a>
+            <a href="guess-2.html" class="menu__item">Программирование</a>
         </div>
         <div class="copyright">
             Copiryte &copy; 2017 <a href="https://geekbrains.ru" target="_blank">GeekBrains</a>
